--- a/Notifica-FrontEnd/angular.json
+++ b/Notifica-FrontEnd/angular.json
@@ -54,6 +54,7 @@
               }
             ],
             "styles": [
+              "node_modules/mdb-angular-ui-kit/assets/scss/mdb.scss",
               "src/styles.scss"
             ],
             "scripts": []
@@ -113,6 +114,7 @@
               }
             ],
             "styles": [
+              "node_modules/mdb-angular-ui-kit/assets/scss/mdb.scss",
               "src/styles.scss"
             ],
             "scripts": []
